# SISMON-MAIN

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py  test1.py
app/prompts/: prompt_generator_prompt.txt  script_generator_prompt.txt
app/services/: __init__.py  add_audio.py  add_background_music.py  add_multiple_texts.py  apply_pan_effect.py  concatenate_media.py  generate_image.py  generate_media.py  generate_media_segments.py  generate_video.py  generate_voice.py  prompt_generator.py  resize_and_center.py  script_generator.py
app/utils/: __init__.py  file_handler.py
